--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@ My research focuses on development of chemical kinetic models to describe oxidat
 
 <ul>
 <li> <h3>Kinetics of biodiesel surrogate components:</h3> 
-	One of our recent work concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methyl butanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description. Thereafter, a constrained optimization approach is used to propose a surrogate to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to study the use of biodiesels and its blends with diesel in CI engines. </br>
+	One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description. Thereafter, a constrained optimization approach is used to propose a surrogate to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion simulations to study the use of biodiesels and its blends with diesel in CI engines. </br>
 </br>  <center><img src="./images/JSR_rme_sur1.jpg" width="300">	</br>
 Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>
 	(presented at the 10th U.S. National Combustion Meeting, 2017) 
 </center> 
 </br>	
-	Most of the available studies are on high temperature kinetics of methyl butanoate oxidation, while some differences are noted between existing studies at lower temperatures. We are collaborating with PTB, Germany to investigate this aspect using Rapid Compression Machines, through which ignition delays of methyl butanoate at the low and intermediate temperatures (T<1000 K), have been measured. Our present work focuses on with developing a kinetic model for methylbutanoate to explain these experimental observations in addition to the ones already in literature. 
+	Most of the available studies are on high temperature kinetics of methyl butanoate oxidation, while some differences are noted between existing ones at lower temperatures. We are collaborating with PTB, Germany to investigate this aspect using Rapid Compression Machines, through which ignition delays of methylbutanoate at the low and intermediate temperatures (T<1000 K), have been measured. Our present work focuses on with developing a kinetic model for methylbutanoate to explain these experimental observations in addition to the ones already in literature. 
 <td width="15%">
 <center><img src="./images/Aditya_Lele.JPG" width="170">	
 </br>
@@ -194,6 +194,7 @@ Co-advised by Dr. K. Anand</br>
 <ul>	
 <li> <h3>Extinction studies of oxygenated fuels:</h3>
 	Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. We are in process of confirming our observations with an experimental study in a  counterflow configuration  </br>
+</br>
 <center><img src="./images/a2EvsYF1.jpg" width="300">	</br>
 	Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E </br>
 	(presented at the 10th U.S. National Combustion Meeting, 2017) 
@@ -210,10 +211,10 @@ Co-advised by Dr. V. Raghavan</br>
 </center>
 </td>
 </tr>
-<tr>
-<td>
 </ul>
 
+<tr>
+<td>
 <ul>
 <li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
 		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
@@ -228,15 +229,15 @@ Co-advised by Dr. V. Raghavan</br>
 </center>
 </ul>
 
-	
+</td>
+</tr>
 <!--<h3>Alumni</h3>-->
 <!--<li> M. C. Sanjay (M. Tech)-->
 <!--<li> T. V. Vaisakh (M. Tech) -->
-</tr>
+
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-	
 	
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
@@ -257,7 +258,7 @@ Co-advised by Dr. V. Raghavan</br>
 	
 
 <div id="flip1">
-<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute, 36 (1), 507–515, 2017.
+<li> S. Ambikasaran, K. Narayanaswamy "An accurate, fast, mathematically robust, universal, non-iterative algorithm for computing multi-component diffusion velocities", Proceedings of Combustion Institute, 36 (1), 507-515, 2017.
 </div>
 <div id="panel1">
 	<ul style="list-style-type:square">
@@ -268,7 +269,7 @@ Co-advised by Dr. V. Raghavan</br>
 <br>
 
 <div id="flip2">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame 165 (3), 288–309, 2016.
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A component library framework for deriving kinetic mechanisms for multi-component fuel surrogates: application for jet fuel surrogates", Combustion and Flame 165 (3), 288-309, 2016.
 </div>
 <div id="panel2">
 	<ul style="list-style-type:square">
@@ -346,16 +347,15 @@ Co-advised by Dr. V. Raghavan</br>
 </tr>
 
 <!--</tr> -->
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
 <h2>Conference proceedings</h2>
 	
+<h4>2017 -- Present</h4>
 <ul>
-
 <!-- <h4>Click each item for more details</h4> -->
 <div id="flip6">
-<li> A. D. Lele, K. Anand, K. Narayanaswamy "Development of a chemical kinetic mechanism for biodiesel surrogate", 10th U.S. National Combustion Meeting, 2017.
+<li> A. D. Lele, K. Anand, K. Narayanaswamy, "Development of a chemical kinetic mechanism for biodiesel surrogate", 10th U.S. National Combustion Meeting, 2017.
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
@@ -363,8 +363,13 @@ Co-advised by Dr. V. Raghavan</br>
 	</ul>
 </div>	
 <br>
-</ul>
 
+<li> R. Khare, V. Raghavan, K. Narayanaswamy, "Study of auto-ignition and extinction characteristics of diesel blended with oxygenates in laminar opposed non-premixed flames", 10th U.S. National Combustion Meeting, 2017.<br>
+<br>
+
+<li> M. Hunyadi-Gall, G. Mairinger, R. Khare, K. Narayanaswamy, V. Raghavan, K. Seshadri, "The Influence of Stoichiometric Mixture Fraction on Extinction of Laminar, Nonpremixed DME Flames", 10th U.S. National Combustion Meeting, 2017.	
+<br>
+</ul>
 </td>
 </tr>
 
@@ -376,15 +381,15 @@ All mechanism are made available and have been validated as discussed in the jou
 </td>
 </tr> -->
 
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<!--<table border="1" cellspacing="1" cellpadding="5" width="100%">-->
 <tr>
 <td>
 <h2> Open source codes</h2>
 <ul>
-<li>	T. V. Vaisakh (M. Tech) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a></br>
+<li>	T. V. Vaisakh (M. Tech) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
 <li>	M. C. Sanjay (M. Tech) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
-Property Estimation Using THERM</a></br>	
-		
+Property Estimation Using THERM</a>
+</ul>
 </td>
 </tr>
 
@@ -410,7 +415,7 @@ Property Estimation Using THERM</a></br>
 <a href="http://www.davgirlsgopalapuram.com" target="_blank">DAV Girls, Gopalapuram</a></br>
 <a href="http://www.iitm.ac.in" target="_blank">Indian Institute of Technology Madras</a></br>
 <a href="http://www.stanford.edu" target="_blank">Stanford University</a></br>
-<a href="http://www.cornell.edu" target="_blank">Cornell University</a></br>
+<a href="http://www.cornell.edu" target="_blank">Cornell University</a></br></br>
 </td>
 </tr>
 
