--- a/index.html
+++ b/index.html
@@ -231,9 +231,20 @@ Co-advised by Dr. V. Raghavan</br>
 
 </td>
 </tr>
-<!--<h3>Alumni</h3>-->
-<!--<li> M. C. Sanjay (M. Tech)-->
-<!--<li> T. V. Vaisakh (M. Tech) -->
+
+</tr>
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h3>Alumni</h3>
+<ul>
+<li> M. C. Sanjay (M. Tech 2017): <i> SMILES based interface to Thermodynamic Property Estimation Using THERM</br></i>
+<li> T. V. Vaisakh (M. Tech 2017): <i> Reaction mechanism optimization </i></br>
+<li> Kiran Kumar Yalamanchi (Dual Degree 2017)
+<li> Ankit Jain (Dual Degree 2017)
+</ul>
+</td>
+</tr>
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
