--- a/index.html
+++ b/index.html
@@ -397,9 +397,10 @@ All mechanism are made available and have been validated as discussed in the jou
 <td>
 <h2> Open source codes</h2>
 <ul>
-<li>	T. V. Vaisakh (M. Tech) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
-<li>	M. C. Sanjay (M. Tech) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
+<li>	T. V. Vaisakh (M. Tech 2017) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
+<li>	M. C. Sanjay (M. Tech 2017) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
 Property Estimation Using THERM</a>
+<li>   Rohit Khare <a href="dummy">Reduced mechanism based on Quasi-Steady State approximations</a>
 </ul>
 </td>
 </tr>
