--- a/index.html
+++ b/index.html
@@ -180,11 +180,10 @@ Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols:
 <center><img src="./images/Aditya_Lele.JPG" width="170">	
 </br>
 <h4>Aditya Dilip Lele</h4>
-<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-Pursuing Masters </br>
-Co-advised by Dr. K. Anand</br>
-<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 	</center>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras, on the broad topic of kinetic modeling and combustion simulations of biodiesel fuel. His thesis is co-advised by Dr. K. Anand at IIT Madras.</br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 </tr>
 <tr>
@@ -205,10 +204,9 @@ Co-advised by Dr. K. Anand</br>
 </br>
 <h4>Rohit Sanjay Khare</h4>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-Pursuing Masters </br>
-Co-advised by Dr. V. Raghavan</br>
-<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </center>
+Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras. His primary focus is on fundamental studies of extinction strain rates of oxygenated fuels and their blends with conventional fuels. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.</p></br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </td>
 </tr>
 </ul>
@@ -223,10 +221,10 @@ Co-advised by Dr. V. Raghavan</br>
 	</br>
 	<h4>Shanmugasundaram D</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
-	Pursuing PhD </br>
-	Co-advised by Dr. V. Raghavan</br>
-	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </center>
+<li> Pursuing PhD
+<li> Co-advised by Dr. V. Raghavan
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
 </td>
