--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-<td width="25%">
-</br>
-<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
-</td>
+</br> </br> <i>If you are interested in being a part of our team, peruse the problem write-ups posted below to identify your interests and write to me with a subject line that includes the topic title.</i>
 
+<td width="25%">
+	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
+</td>
 </tr>
 <tr>
 <td>
@@ -222,8 +222,7 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 	<h4>Shanmugasundaram D</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-<li> Pursuing PhD
-<li> Co-advised by Dr. V. Raghavan
+Shanmugasundaram obtained his B. Tech in Mechanical Engineering from ?, Puduchery in 2014 and a M. Tech ? in 2015. He is currently pursuing his PhD at IIT Madras. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.</p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
@@ -404,6 +403,15 @@ Property Estimation Using THERM</a>
 </tr>
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h2> Available research projects</h2>
+</td>
+</tr>
+
+<br>
+
+	
 <tr>
 <td>
 <h2> Teaching</h2>
