--- a/index.html
+++ b/index.html
@@ -406,6 +406,17 @@ Property Estimation Using THERM</a>
 <tr>
 <td>
 <h2> Available research projects</h2>
+Write-up coming soon ...
+<ul>
+	<li> Development of kinetic model for Fischer-Tropsch fuels
+	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
+	<li> Mechanism optimization framework
+	<li> Methods for mechanism reduction
+	<li> Development of canonical kinetics solvers and post-processing tools
+	<li> Simulation driven surrogate formulation
+	<li> Importance of unsaturated ester representatives in biodiesel surrogates
+	<li> Thermodynamic property estimation for cyclic species
+</ul>
 </td>
 </tr>
 
