--- a/index.html
+++ b/index.html
@@ -216,13 +216,23 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 <ul>
 <li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
 		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
+</br>
+</br>
+<center><img src="./images/LFF_plot_1.jpg" width="425">	<img src="./images/LFF_plot_2.jpg" width="415">	</br>
+ </br>
+	Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
+data of major species, dashed lines: simulations
+</br>
+</center> 
+</br>	
 	<td width="15%">
 	<center><img src="./images/Shanmugasundaram.jpg" width="150">	
 	</br>
 	<h4>Shanmugasundaram D</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Shanmugasundaram obtained his B. Tech in Mechanical Engineering from ?, Puduchery in 2014 and a M. Tech ? in 2015. He is currently pursuing his PhD at IIT Madras. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.</p></br>
+Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery in 2014 and 2016 respectively. He is currently pursuing his PhD at IIT Madras. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras.
+</p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
