--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@ Write-up coming soon ...
 	<li> Simulation driven surrogate formulation
 	<li> Importance of unsaturated ester representatives in biodiesel surrogates
 	<li> Thermodynamic property estimation for cyclic species
+	<li> Automatic reaction mechanism generation
+	<li> Development of structure based compact reaction models
 </ul>
 </td>
 </tr>
