--- a/index.html
+++ b/index.html
@@ -420,14 +420,15 @@ Write-up coming soon ...
 <ul>
 	<li> Development of kinetic model for Fischer-Tropsch fuels
 	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
+	<li> Analysis of the importance of unsaturated ester representatives in biodiesel surrogates
+	<li> Automatic reaction mechanism generation
 	<li> Mechanism optimization framework
 	<li> Methods for mechanism reduction
+	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
 	<li> Simulation driven surrogate formulation
-	<li> Importance of unsaturated ester representatives in biodiesel surrogates
+	<li> Defining surrogate for liquid-phase applications
 	<li> Thermodynamic property estimation for cyclic species
-	<li> Automatic reaction mechanism generation
-	<li> Development of structure based compact reaction models
 </ul>
 </td>
 </tr>
