Write up - reduction

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Write-up coming soon ...
 	<li> Analysis of the importance of unsaturated ester representatives in biodiesel surrogates
 	<li> Automatic reaction mechanism generation
 	<li> Mechanism optimization framework
-	<li> Methods for mechanism reduction
+	<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html"> Methods for mechanism reduction </a> 
 	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
 	<li> Simulation driven surrogate formulation
