--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ My research focuses on development of chemical kinetic models to describe oxidat
 <ul>
 <li> <h3>Kinetics of biodiesel surrogate components:</h3> 
 	One of our recent interests concerns with developing a kinetic scheme for a small ester, which is a potentially important candidate to represent the longer chain molecules in the real biodiesel fuel, namely methylbutanoate. A compact reaction scheme is derived for methylbutanoate from an existing detailed mechanism, revised based on newer experimental measurements and theoretical rate constant calculations, and comprehensively assessed for its component kinetic description. Thereafter, a constrained optimization approach is used to propose a surrogate to represent biodiesel fuel, consisting of methylbutanoate and n-dodecane, and assessed thoroughly (Fig. below). This work serves as our first step towards the development of a compact reaction scheme for a biodiesel surrogate which will be coupled with combustion studies to investigate the use of biodiesels and its blends with diesel in CI engines. </br>
-</br>  <center><img src="./images/JSR_rme_sur1.jpg" width="300">	</br>
+</br>  <center><img src="./current_research/biodiesel_aditya/JSR_rme_sur1.jpg" width="300">	</br>
 Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols: experiments for biodiesel, solid lines: Surrogate A, dashed lines: Surrogate B </br>
 	(presented at the 10th U.S. National Combustion Meeting, 2017) 
 </center> 
@@ -194,7 +194,7 @@ Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute
 <li> <h3>Extinction studies of oxygenated fuels:</h3>
 	Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. We are in process of confirming our observations with an experimental study in a  counterflow configuration  </br>
 </br>
-<center><img src="./images/a2EvsYF1.jpg" width="300">	</br>
+<center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg" width="300">	</br>
 	Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E </br>
 	(presented at the 10th U.S. National Combustion Meeting, 2017) 
 </center> 
@@ -218,7 +218,7 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
 </br>
 </br>
-<center><img src="./images/LFF_plot_1.jpg" width="425">	<img src="./images/LFF_plot_2.jpg" width="415">	</br>
+<center><img src="./current_research/mma_shanmugasundaram/LFF_plot_1.jpg" width="425">	<img src="./current_research/mma_shanmugasundaram/LFF_plot_2.jpg" width="415">	</br>
  </br>
 	Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
 data of major species, dashed lines: simulations
