Alternative Fuel combustion

--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@ Property Estimation Using THERM</a>
 <h2> Available research projects</h2>
 Write-up coming soon ...
 <ul>
-	<li> Development of kinetic model for Fischer-Tropsch fuels
+	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
+<!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
 	<li> Analysis of the importance of unsaturated ester representatives in biodiesel surrogates
 	<li> Automatic reaction mechanism generation
