--- a/project_writeup/Alternative_Fuel_Combustion.html
+++ b/project_writeup/Alternative_Fuel_Combustion.html
@@ -18,11 +18,12 @@ h2   {color: black;}
 
 <h2>Abstract</h2>
 
-
+Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. This project involves modeling the oxidation of these fuels using a representative mixture. Theoretical in nature, the research focus is on identifying such a suitable mixture and arriving at a kinetic scheme to predict the fuel's combustion behavior from a fundamental approach. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
+<!-- <a "" >More to read on ... </a>. -->
 
 <h2>Pre-requisite</h2>
 
-Penchant for writing stand-alone codes and interest in combustion
+Strong desire to pick up combustion kinetics concepts (no prior familiarity is required)
 
 <!-- <h2>Reading</h2> -->
 <!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
