--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
+<a href="" target="_blank">List of all topics floated for MS/PhD admissions 2017</a> <br>
+
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
@@ -421,9 +423,11 @@ Write-up coming soon ...
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
 <!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
-	<li> Analysis of the importance of unsaturated ester representatives in biodiesel surrogates
+	<li> <a href="project_writeup/Biodiesel_Combustion.html"> Biodiesel Combustion </a>
+		<!--Analysis of the importance of unsaturated ester representatives in biodiesel surrogates -->
 	<li> Automatic reaction mechanism generation
-	<li> Mechanism optimization framework
+	<li> <a href="project_writeup/Biodiesel_Combustion.html"> Optimization in Combustion </a> 
+		<!-- Mechanism optimization framework -->
 	<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html"> Methods for mechanism reduction </a> 
 	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
