--- a/project_writeup/Reduced_Reaction_Models_For_Combustion.html
+++ b/project_writeup/Reduced_Reaction_Models_For_Combustion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>Reduced_Reaction_Models_For_Combustion</title>
+<title>Reduced Reaction Models For Combustion</title>
 <head>
 <style type="text/css">
 body{color:black}
