List of all topics Winter 2017

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
-<a href="" target="_blank">List of all topics floated for MS/PhD admissions 2017</a> <br>
+<a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank">List of all topics floated for MS/PhD admissions 2017</a> <br>
 
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
