List of all topics Winter 2017

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body{font-size: 1.1em;}
 A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
-A:hover{color:red}
+A:hover{color:pink}
 h2   {color: lightblue;}
 h3   {color: pink;}
 h4   {color: yellow;}
@@ -155,7 +155,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
-<a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank">List of all topics floated for MS/PhD admissions 2017</a> <br>
+<h1> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> Abstracts for all topics floated for MS/PhD admissions (Winter 2017)</a> <br> </h1>
 
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
