Link to optimization

--- a/project_writeup/Optimization_in_Combustion.html
+++ b/project_writeup/Optimization_in_Combustion.html
@@ -7,7 +7,7 @@
 body{color:black}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
-A:link{color:yellow}
+A:link{color:blue}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
