--- a/project_writeup/Optimization_in_Combustion.html
+++ b/project_writeup/Optimization_in_Combustion.html
@@ -8,7 +8,7 @@ body{color:black}
 body{font-family:"Palatino"}
 body{font-size: 1.1em;}
 A:link{color:blue}
-A:visited{color:yellow}
+A:visited{color:pink}
 A:hover{color:red}
 A:hover{color:red}
 h2   {color: black;}
