--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -35,5 +35,12 @@ Reaction mechanisms that describe the oxidation of a fuel are huge with several 
 <h3>Pre-requisite</h3>
 Penchant for writing stand-alone codes and interest in combustion
 
+<h2> Optimization in Combustion </h2> <h3> Category: PhD </h3>
+
+<h3>Abstract</h3>
+The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. This project initially involves developing a black box tool to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,255,0)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
+
+<h3>Pre-requisite</h3>
+Penchant for writing stand-alone codes and interest in combustion
   
 </body></html>
