Adding to master list

--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -42,5 +42,12 @@ The progress rates of individual steps in the oxidation of fuels are uncertain. 
 
 <h3>Pre-requisite</h3>
 Penchant for writing stand-alone codes and interest in combustion
-  
+
+<h2> Biodiesel Combustion </h2> <h3> Category: PhD </h3>
+<h3>Abstract</h3>
+Biodiesel is being increasingly used in combination with diesel fuel in CI engines because of being renewable and resulting in reduced emissions. This project focuses on a fundamental study to identify the importance of different constituents in biodiesel and develop a kinetic model to describe its oxidation. This opens up options to study blends of biodiesel with diesel fuel as well. 
+
+<h3>Pre-requisite</h3>
+Strong desire to pick up combustion kinetics concepts (no prior familiarity is required)
+
 </body></html>
