Enhancing master list

--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -17,7 +17,9 @@ h3  {color: black;}
 </style>
 </head>
 
-
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
 <h2> Alternative Fuel combustion </h2> <h3> Category: M.S (can be extended to a PhD) </h3>
 
 <h3>Abstract</h3>
@@ -30,7 +32,8 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 <h2> Reduced Reaction Models For Combustion </h2> <h3> Category: M.S </h3>
 <h3>Abstract</h3>
 Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. This project initially involves developing a black box tool to reduce reaction mechanisms based on existing ideas. Improvements will be suggested to existing methods, their pros and cons will be evaulated, and the perfect order in which they must be applied to achieve best results will be investigated.
-
+</td>
+</tr>
 
 <h3>Pre-requisite</h3>
 Penchant for writing stand-alone codes and interest in combustion
@@ -38,7 +41,7 @@ Penchant for writing stand-alone codes and interest in combustion
 <h2> Optimization in Combustion </h2> <h3> Category: PhD </h3>
 
 <h3>Abstract</h3>
-The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. This project initially involves developing a black box tool to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,255,0)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
+The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. This project initially involves developing a black box tool to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,0,255)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
 
 <h3>Pre-requisite</h3>
 Penchant for writing stand-alone codes and interest in combustion
