Enhancing master list

--- a/index.html
+++ b/index.html
@@ -417,7 +417,9 @@ Property Estimation Using THERM</a>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-<h2> Available research projects</h2>
+
+<h2> <a id="Available_research_projects"> Available research projects</a>
+</h2>
 Write-up coming soon ...
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
@@ -437,6 +439,7 @@ Write-up coming soon ...
 </ul>
 </td>
 </tr>
+	
 
 <br>
 
