Enhancing master list

--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -78,5 +78,6 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 </td>
 </table>
 
+ More topics that are open ...
 <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> More topics that are open ... </a>
 </body></html>
