Enhancing master list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:pink}
-h2   {color: lightblue;}
+h2   {color: SeaShell;}
 h3   {color: pink;}
 h4   {color: yellow;}
 }
@@ -160,7 +160,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-</br> </br> <i>If you are interested in being a part of our team, peruse the problem write-ups posted below to identify your interests and write to me with a subject line that includes the topic title.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> problem write-ups posted below</a> to identify your interests and write to me with a subject line that includes the topic title.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
