--- a/project_writeup/MS_PhD_Winter_2017.html
+++ b/project_writeup/MS_PhD_Winter_2017.html
@@ -51,7 +51,6 @@ Penchant for writing stand-alone codes and interest in combustion
 </tr>
 </table>
 
-<br> <br>
 <center><h2> Topics for PhD programme</h2></center>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -78,6 +77,6 @@ Strong desire to pick up combustion kinetics concepts (no prior familiarity is r
 </td>
 </table>
 
- More topics that are open ...
-<a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> More topics that are open ... </a>
+
+<a href="http://krithikasivaram.github.io/index.html#Available_research_projects" style="color: rgb(0,100,100)"> <h1> <center>More topics that are open</center> </h1> </a>
 </body></html>
