--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@ A:hover{color:pink}
 h2   {color: SeaShell;}
 h3   {color: pink;}
 h4   {color: yellow;}
+
+
+/* Style the tab */
+div.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
 }
+
+/* Style the buttons inside the tab */
+div.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+div.tab button.active {
+    background-color: #ccc;
+}
+
+/*Slide show trial */
 </style>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -94,9 +125,20 @@ image2.src = "images/img4.jpg"
 
 <body bgcolor = "black">
 
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Home')" id="defaultOpen">Home</button>
+  <button class="tablinks" onclick="openCity(event, 'Current_Research')">Research Team and Activities</button>
+  <button class="tablinks" onclick="openCity(event, 'Publications')">Publications</button>
+  <button class="tablinks" onclick="openCity(event, 'Available_Projects')">Available Projects</button>
+  <button class="tablinks" onclick="openCity(event, 'Teaching')">Teaching</button>
+  <button class="tablinks" onclick="openCity(event, 'Others')">Others</button>
+</div>
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Home" class="tabcontent">
+
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
-
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Assistant Professor<br>
@@ -123,7 +165,28 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <td width="50%">
 <img src="./images/wordle.png" width="600">	
 </td>
+</tr>
+</table>
 
+<br>
+<table border="1" cellspacing="2" cellpadding="5" width="100%">
+<tr>
+	<td width="100%">
+	My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
+</br> </br> <i>If you are interested in being a part of our team, peruse the <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> problem write-ups posted here</a> to identify your interests and write to me with a subject line that includes the topic title.</i>
+</td>
+</tr> 
+</table>
+
+<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a> <br> </h2>
+
+Research highlights
+
+</div>
+
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Current_Research" class="tabcontent">
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -155,12 +218,11 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <!--</td>-->
 <!--</tr>-->
 
-<h1> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> Abstracts for all topics floated for MS/PhD admissions (Winter 2017)</a> <br> </h1>
 
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-</br> </br> <i>If you are interested in being a part of our team, peruse the <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> problem write-ups posted below</a> to identify your interests and write to me with a subject line that includes the topic title.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> problem write-ups posted here</a> to identify your interests and write to me with a subject line that includes the topic title.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
@@ -241,7 +303,6 @@ Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from 
 </td>
 </tr>
 
-</tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
@@ -254,6 +315,12 @@ Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from 
 </ul>
 </td>
 </tr>
+</table>
+</div>
+
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Publications" class="tabcontent">
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -393,6 +460,7 @@ Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from 
 </td>
 </tr>
 
+
 <!-- <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
@@ -402,9 +470,11 @@ All mechanism are made available and have been validated as discussed in the jou
 </tr> -->
 
 <!--<table border="1" cellspacing="1" cellpadding="5" width="100%">-->
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
 <tr>
 <td>
-<h2> Open source codes</h2>
+<h2> <a id="Open_source_Codes"> Open source codes</a></h2>
 <ul>
 <li>	T. V. Vaisakh (M. Tech 2017) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
 <li>	M. C. Sanjay (M. Tech 2017) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
@@ -413,7 +483,12 @@ Property Estimation Using THERM</a>
 </ul>
 </td>
 </tr>
+</table>
 
+</div>
+
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Available_Projects" class="tabcontent">
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
@@ -439,25 +514,33 @@ Write-up coming soon ...
 </ul>
 </td>
 </tr>
-	
+</table>
+</div>
 
 <br>
 
 	
+<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+<div id="Teaching" class="tabcontent">	
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+	
 <h2> Teaching</h2>
 <ul>
 <li>	ME6150: Numerical methods in thermal engineering (Jan--May 2016)
 <li>	ME1100: Undergraduate thermodynamics (Jul--Nov 2016)	
 <li>	ME6150: Numerical methods in thermal engineering (Jan--May 2017)
 <li>	ME6060: Combustion Fundamentals (Jul--Nov 2017)
+
+</ul>
 </td>
 </tr>
+</table>
+</div>
 
-<br>
-</ul>
-
+<div id="Others" class="tabcontent">
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
 <h2> Alma mater</h2>
@@ -469,7 +552,6 @@ Write-up coming soon ...
 </td>
 </tr>
 
-
 <tr>
 <td>
 <h2> Useful web-based tools</h2>
@@ -479,6 +561,8 @@ Write-up coming soon ...
 <a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
 </td>
 </tr>
+</table>
+</div>
 
 <!-- Google Analytics -->
 <script>
@@ -489,7 +573,27 @@ Write-up coming soon ...
 
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
-
 </script>
   
+<script>
+function openCity(evt, cityName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+</script>
+
+<script>
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
+
 </body></html>
