--- a/index.html
+++ b/index.html
@@ -46,6 +46,101 @@ div.tab button.active {
 }
 
 /*Slide show trial */
+* {box-sizing:border-box}
+.mySlides {display:none}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 700px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
 </style>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -178,9 +273,45 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </tr> 
 </table>
 
-<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a> <br> </h2>
+<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 
-Research highlights
+<h1><center> Research highlights </center></h1>
+<!-- Slide show from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow-->
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <center> <img src="research_highlights/surface_global.png" style="width:60%"> 
+  <br> </center>
+</div>
+
+<div class="mySlides fade">
+  <center> <img src="research_highlights/time_taken_fast_algorithm.png" style="width:80%"> 
+  <br> </center>
+</div>
+
+<div class="mySlides fade">
+  <center> <img src="research_highlights/component_library_mixmatch.png" style="width:80%"> 
+  <br> </center>
+</div>
+
+<div class="mySlides fade">
+  <center> <img src="research_highlights/tig_phi1_jetSurrogate_P20.png" style="width:80%"> 
+  <br> </center>
+</div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span> 
+</div>
 
 </div>
 
@@ -323,6 +454,18 @@ Shanmugasundaram obtained his B. Tech and M.tech in Mechanical Engineering from 
 <div id="Publications" class="tabcontent">
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
+<h2> <a id="Open_source_Codes"> Open source codes</a></h2>
+<ul>
+<li>	T. V. Vaisakh (M. Tech 2017) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
+<li>	M. C. Sanjay (M. Tech 2017) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
+Property Estimation Using THERM</a>
+<li>   Rohit Khare <a href="dummy">Reduced mechanism based on Quasi-Steady State approximations</a>
+</ul>
+</td>
+</tr>
+
 <tr>
 <td>
 	
@@ -472,17 +615,6 @@ All mechanism are made available and have been validated as discussed in the jou
 <!--<table border="1" cellspacing="1" cellpadding="5" width="100%">-->
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-<tr>
-<td>
-<h2> <a id="Open_source_Codes"> Open source codes</a></h2>
-<ul>
-<li>	T. V. Vaisakh (M. Tech 2017) <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a>
-<li>	M. C. Sanjay (M. Tech 2017) <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
-Property Estimation Using THERM</a>
-<li>   Rohit Khare <a href="dummy">Reduced mechanism based on Quasi-Steady State approximations</a>
-</ul>
-</td>
-</tr>
 </table>
 
 </div>
@@ -595,5 +727,35 @@ function openCity(evt, cityName) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
+
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
 
 </body></html>
