Pretty and neat

--- a/index.html
+++ b/index.html
@@ -625,8 +625,6 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 
-<h2> <a id="Available_research_projects"> Available research projects</a>
-</h2>
 Write-up coming soon ...
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
@@ -658,17 +656,17 @@ Write-up coming soon ...
 <tr>
 <td>
 	
-<h2> Teaching</h2>
 <ul>
 <li>	ME6150: Numerical methods in thermal engineering (Jan--May 2016)
 <li>	ME1100: Undergraduate thermodynamics (Jul--Nov 2016)	
 <li>	ME6150: Numerical methods in thermal engineering (Jan--May 2017)
 <li>	ME6060: Combustion Fundamentals (Jul--Nov 2017)
-
 </ul>
+
 </td>
 </tr>
 </table>
+
 </div>
 
 <div id="Others" class="tabcontent">
@@ -697,7 +695,7 @@ Write-up coming soon ...
 </div>
 
 <!-- Google Analytics -->
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -706,7 +704,8 @@ Write-up coming soon ...
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
 </script>
-  
+-->
+
 <script>
 function openCity(evt, cityName) {
     var i, tabcontent, tablinks;
