Pretty and neat

--- a/index.html
+++ b/index.html
@@ -15,36 +15,37 @@ h2   {color: SeaShell;}
 h3   {color: pink;}
 h4   {color: yellow;}
 
-
+/* !!!!!!!!!!!!!!!!!!! TABS !!!!!!!!!!!!!!!!!! */
 /* Style the tab */
 div.tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    border: 2px solid blue;
+    background-color: LightGoldenRodYellow;
 }
 
 /* Style the buttons inside the tab */
 div.tab button {
     background-color: inherit;
     float: left;
-    border: none;
+    border: 2px solid blue;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 12px 16px;
     transition: 0.3s;
     font-size: 17px;
 }
 
 /* Change background color of buttons on hover */
 div.tab button:hover {
-    background-color: #ddd;
+    background-color: pink;
 }
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: DarkOrange;
 }
 
+/* !!!!!!!!!!!!!!!!!!!!!!!! SLIDE SHOW !!!!!!!!!!!!!!!!!!!!! */
 /*Slide show trial */
 * {box-sizing:border-box}
 .mySlides {display:none}
@@ -322,33 +323,6 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
-
-<!--<h2>In review</h2>-->
-<!-- <h4>Click each item for more details</h4> -->
-
-<!--<ul>-->
-
-<!--<br>-->
-
-<!--<tr>-->
-<!--<td>-->
-<!--<h2>Component Library framework</h2>-->
-<!-- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></br>-->
-<!-- <br>-->
-<!-- Validation results: -->
-<!--	<ul style="list-style-type:square"> -->
-<!-- <li> <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"-->
-<!--  target="_blank">High temperature mechanism for n-dodecane and iso-octane</a></br> </li> -->
-<!-- <li> <a href="https://www.dropbox.com/s/ufmt20e104q0ugh/dodecane_lowT.pdf?dl=0"-->
-<!--  target="_blank">High to low temperature mechanism for n-dodecane</a></br> </li> -->
-<!-- <li> <a href="https://www.dropbox.com/s/w2vrywaqdjeopfz/heptane_isooctane_toluene.pdf?dl=0"-->
-<!--  target="_blank">High temperature mechanism for n-heptane, iso-octane, and toluene</a></br> </li>-->
- <!-- <a href="https://www.dropbox.com/s/cjw85ain2ovrxzf/dodecane_highT_isooctane.pdf?dl=0"
-<!  target="_blank">High temperature mechanism for {\it n}-dodecane and {\it m}-xylene</a></br> -->
-<!-- 	</ul>-->
-<!--</td>-->
-<!--</tr>-->
-
 
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
@@ -646,9 +620,6 @@ Write-up coming soon ...
 </tr>
 </table>
 </div>
-
-<br>
-
 	
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 <div id="Teaching" class="tabcontent">	
