Pretty and neat

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ div.tab {
 div.tab button {
     background-color: inherit;
     float: left;
-    border: 2px solid blue;
+    border: none;
     outline: none;
     cursor: pointer;
     padding: 12px 16px;
@@ -281,7 +281,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <center> <img src="research_highlights/surface_global.png" style="width:60%"> 
+  <center> <img src="research_highlights/surface_global.png" style="width:80%"> 
   <br> </center>
 </div>
 
