Adding missing link to available projects

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 
-Write-up coming soon ...
+<a id="Available_research_projects"> Write-up coming soon ... </a>
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
 <!-- Development of kinetic model for Fischer-Tropsch fuels -->
