--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <h2>Research Team</h2>
 <!-- <h4>Click each item for more details</h4> -->
 My research focuses on development of chemical kinetic models to describe oxidation of fuels. I am interested in predicting global combustion characteristics of conventional and alternative fuels and interpreting these observations based on insights gained from molecular level kinetic descriptions. In the recent times, my team has been studying kinetics of oxygenated fuels, which being renewable and resulting in reduced emissions, are immediately relevant to the country's energy needs. 
-</br> </br> <i>If you are interested in being a part of our team, peruse the <a href="http://krithikasivaram.github.io/index.html#Available_research_projects"> problem write-ups posted here</a> to identify your interests and write to me with a subject line that includes the topic title.</i>
+</br> </br> <i>If you are interested in being a part of our team, peruse the list of available projects to identify your interests and write to me with a subject line that includes the topic title.</i>
 
 <td width="25%">
 	<center><img src="./images/krithika.png" width="170">	</center> </br> </br>
@@ -599,7 +599,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 
-<a id="Available_research_projects"> Write-up coming soon ... </a>
+<!-- ><a id="Available_research_projects"> Write-up coming soon ... </a> -->
 <ul>
 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html"> Alternative Fuel Combustion </a> 
 <!-- Development of kinetic model for Fischer-Tropsch fuels -->
